# tournament-tasks

./: README.md  pyproject.toml
src/tournament_tasks/: __init__.py
