[project]
name = "tournament-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
]

[project.scripts]
tt = "tournament_tasks:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
